# cpp-primer-class-design

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  hasptr.test  hasptr.test.stackdump  mail_handle.test  rebuild.sh  strblob.test  test-query.test.stackdump  text_query.test
class-design/: CMakeLists.txt
class-design/hasptr/: CMakeLists.txt
class-design/hasptr/tests/: hasptr.test.cc
class-design/libhasptr/: CMakeLists.txt
class-design/libhasptr/libhasptr/: hasptr.h  hasptr.hpp
class-design/libhasptr/tests/: hasptr.test.cpp
class-design/libmail-handle/: CMakeLists.txt
class-design/libmail-handle/libmail-handle/: mail-handle.cpp  mail-handle.hpp  mail_handle.cpp
class-design/libmail-handle/tests/: mail-handle.test.cpp  mail_handle.test.cpp
class-design/libstrblob/: CMakeLists.txt
class-design/libstrblob/libstrblob/: strblob.cpp  strblob.hpp
class-design/libstrblob/tests/: strblob.test.cpp
class-design/libstrvec/: CMakeLists.txt
class-design/libstrvec/libstrvec/: strvec.cpp  strvec.hpp
class-design/libstrvec/tests/: strvec.test.cpp
class-design/strblob/: CMakeLists.txt
class-design/strblob/tests/: strblob.test.cc
class-design/text-query/: CMakeLists.txt
class-design/text-query/libtext-query/: query_result.cc
class-design/text-query/tests/: text-query.test.cpp  text_query.test.cc
class-design/text-query/text-query/: query-result.cpp  query-result.hpp  text-query.cpp  text-query.hpp
cmake/: FindHasptr.cmake  FindStrblob.cmake  Findmail-handle.cmake  Logger.cmake
inc/: text_query.h
inc/strblob/: strblob.h
src/: main.cc  text_query.cc
src/strblob/: strblob.cc  test.cc
src/text-query/: text_query.cc
tests/: CMakeLists.txt  hasptr_test.cc  strblob_test.cc
